crates/macros/tests/debug_job/fail/argument_not_extractor.rs
use blueprint_macros::debug_job;

#[debug_job]
async fn job(_foo: bool) {}

fn main() {}
