crates/macros/tests/debug_job/fail/argument_not_extractor.stderr
error[E0277]: the trait bound `bool: FromJobCall<(), blueprint_core::extract::private::ViaParts>` is not satisfied
 --> tests/debug_job/fail/argument_not_extractor.rs:4:20
  |
4 | async fn job(_foo: bool) {}
  |                    ^^^^ the trait `FromJobCallParts<()>` is not implemented for `bool`
  |
  = note: Function argument is not a valid blueprint extractor.
          See `https://docs.rs/axum/0.8/axum/extract/index.html` for details
  = help: the following other types implement trait `FromJobCallParts<Ctx>`:
            `()` implements `FromJobCallParts<Ctx>`
            `(T1, T2)` implements `FromJobCallParts<Ctx>`
            `(T1, T2, T3)` implements `FromJobCallParts<Ctx>`
            `(T1, T2, T3, T4)` implements `FromJobCallParts<Ctx>`
            `(T1, T2, T3, T4, T5)` implements `FromJobCallParts<Ctx>`
            `(T1, T2, T3, T4, T5, T6)` implements `FromJobCallParts<Ctx>`
            `(T1, T2, T3, T4, T5, T6, T7)` implements `FromJobCallParts<Ctx>`
            `(T1, T2, T3, T4, T5, T6, T7, T8)` implements `FromJobCallParts<Ctx>`
          and $N others
  = note: required for `bool` to implement `FromJobCall<(), blueprint_core::extract::private::ViaParts>`
note: required by a bound in `__blueprint_macros_check_job_0_from_job_check`
 --> tests/debug_job/fail/argument_not_extractor.rs:4:20
  |
4 | async fn job(_foo: bool) {}
  |                    ^^^^ required by this bound in `__blueprint_macros_check_job_0_from_job_check`
